--- a/screen.css
+++ b/screen.css
@@ -15,9 +15,17 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font: angular;
   vertical-align: baseline; }
+h1 {border: 10px solid tomato;
+  background-color:black;
+  color:tomato;
 
+}
+p { 
+  border: Solid tomato;
+  color: black;
+}
 body {
   line-height: 1; }
 
@@ -40,7 +48,7 @@ q, blockquote {
     content: none; }
 
 a img {
-  border: none; }
+  border:0}
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
