--- a/screen.css
+++ b/screen.css
@@ -17,7 +17,8 @@ time, mark, audio, video {
   font-size: 100%;
   font: angular;
   vertical-align: baseline; }
-h1 {border: 10px solid rgb(255, 102, 0);
+h1 {
+  border: 10px solid rgb(255, 102, 0);
   background-color:black;
   color:rgb(255, 102, 0);
 
