--- a/screen.css
+++ b/screen.css
@@ -59,9 +59,9 @@ body {
   color: #2a2a2a; }
 
 a {
-  color: #0388a6; }
+  color: #000000; }
   a:hover {
-    color: #009ce0; }
+    color: #000000; }
 
 #main {
   padding: 50px; }
