Added more projects

--- a/screen.css
+++ b/screen.css
@@ -23,10 +23,10 @@ h1 {
   color:rgb(255, 102, 0);
 
 }
-p { 
+/* p { 
   border: Solid tomato;
   color: black;
-}
+} */
 body {
   line-height: 1; }
 
